correct beaglebone can interface and config file path

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"server": {
 		"host": "10.10.10.1",
 		"port": 41234,
-		"caninterface": "vcan0",
+		"caninterface": "can0",
 		"monitor": [{
 			"mode": 1,
 			"PID": "0C"
@@ -20,6 +20,6 @@
 	"client": {
 		"host": "10.10.10.2",
 		"port": 41234,
-		"caninterface": "vcan0"
+		"caninterface": "can0"
 	}
 }
