switch to systemd

--- a/linux-configs/client.conf
+++ b/linux-configs/client.conf
@@ -1,14 +1,15 @@
-start on startup
+[Unit]
+Description=canbusprotector
+After=network.target
+Requires=network.target
 
-respawn
+[Service]
+TimeoutStartSec=0
+WorkingDirectory=/root/canbus-protector/
+ExecStartPre=/root/canbus-protector/initcanbus.sh
+ExecStart=/usr/bin/node /root/canbus-protector/client.js
+Restart=always
+RestartSec=3
 
-pre-start script
-	echo "#### NEW INSTANCE ####" >> /root/client.log
-	date >> /root/client.log
-	echo "#### ####" >> /root/client.log
-	#start canbus
-	ip link set can0 type can bitrate 500000
-	ip link set can0 up
-end script
-
-exec /usr/bin/node /root/canbusprotector/client.js >> /root/client.log
+[Install]
+WantedBy=multi-user.target
