--- a/linux-configs/server.conf
+++ b/linux-configs/server.conf
@@ -1,14 +1,15 @@
-start on startup
+[Unit]
+Description=canbusprotector
+After=network.target
+Requires=network.target
 
-respawn
+[Service]
+TimeoutStartSec=0
+WorkingDirectory=/root/canbus-protector/
+ExecStartPre=/root/canbus-protector/initcanbus.sh
+ExecStart=/usr/bin/node /root/canbus-protector/server.js
+Restart=always
+RestartSec=3
 
-pre-start script
-	#start canbus
-	echo "#### NEW INSTANCE ####" >> /root/server.log
-	date >> /root/server.log
-	echo "#### ####" >> /root/server.log
-	ip link set can0 type can bitrate 500000
-	ip link set can0 up
-end script
-
-exec /usr/bin/node /root/canbusprotector/server.js >> /root/server.log
+[Install]
+WantedBy=multi-user.target
